<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="billTotal">Bill Total</string>
    <string name="tenPercent">10%</string>
    <string name="fifteenPercent">15%</string>
    <string name="twentyPercent">20%</string>
    <string name="tipAmount">Tip</string>
    <string name="totalAmount">Total</string>
    <string name="cutomText">Custom</string>
    <string name="example18percent">eg. 18%</string>

</resources>
